Final update on Odin Project for HTML CSS Easy

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Shafie Rahim" />
     <meta name="description" content="Odin Project on HTML/CSS, task: Easy" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shafie´s Google</title>
+    <title>Shafie´s Google EASY</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -33,20 +33,24 @@
                 <a href="#Lucky">I´m Feeling Lucky</a>
             </div>
             <article>
-                <p>Google offered in: Bahasa Melayu, English, Español, and Deutsche</p>
+                <p>Google offered in: <a href="https://ms.wikipedia.org/wiki/Bahasa_Melayu">Bahasa Melayu</a> <a href="https://en.wikipedia.org/wiki/English_language">English</a> <a href="https://es.wikipedia.org/wiki/Idioma_espa%C3%B1ol">Español</a> <a href="https://de.wikipedia.org/wiki/Deutsche_Sprache">Deutsche</a></p>
             </article>
         </section>
         <footer>
             <div class="Country">Spain</div>
             <div id="GoogleSuff01">
-                <ul>
-                    <li class="left"><a href="#Adv">Advertising</a></li>
-                    <li class="left"><a href="#Bus">Business</a></li>
-                    <li class="left"><a href="#Abt">About</a></li>
-                    <li class="right"><a href="#Priv">Privacy</a></li>
-                    <li clsas="right"><a href="#Term">Terms</a></li>
-                    <li class="right"><a href="#Sett">Settings</a></li>
-                </ul>
+                <div class="left">
+                    <a href="#Adv">Advertising</a>
+                    <a href="#Bus">Business</a>
+                    <a href="#Abt">About</a>
+                </div>
+                <div class="right">
+                    <a href="#Priv">Privacy</a>
+                    <a href="#Term">Terms</a>
+                    <a href="#Sett">Settings</a>
+                </div>
+                <div style="clear: both"></div>
+                <!-- from https://stackoverflow.com/questions/15725098/how-to-align-footer-text-on-the-right-and-on-the-left -->
             </div>
         </footer>
     </main>
